--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +16,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Aquallera">
+
+        <meta-data
+            android:name="com.mapbox.accessToken"
+            android:value="@string/mapbox_access_token" />
 
         <!-- Main Activity -->
         <activity
@@ -57,6 +63,10 @@
         <activity android:name=".ProfileActivity"
             android:exported="false"
             android:label="Profile"/>
+
+        <activity android:name=".EditProfileActivity"
+            android:exported="false"
+            android:label="Edit Profile"/>
 
     </application>
 
